--- a/clients/application-dev.yml
+++ b/clients/application-dev.yml
@@ -1,5 +1,5 @@
-spring:
-  datasource:
-    url: jdbc:postgresql://localhost:0000
-    username: username
-    password: password
+#spring:
+#  datasource:
+#    url: jdbc:postgresql://localhost:0000
+#    username: username
+#    password: password
