--- a/application-dev.yml
+++ b/application-dev.yml
@@ -1,5 +1,5 @@
-spring:
-  datasource:
-    hikari:
-      maximum-pool-size: 10
-      minimum-idle: 0
+#spring:
+#  datasource:
+#    hikari:
+#      maximum-pool-size: 10
+#      minimum-idle: 0
