--- a/clients/application.yml
+++ b/clients/application.yml
@@ -14,3 +14,8 @@ spring:
 
   devtools:
     add-properties: fals
+
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:9000/eureka/
