--- a/clients/application.yml
+++ b/clients/application.yml
@@ -14,3 +14,8 @@
 #
 #  devtools:
 #    add-properties: false
+
+eureka:
+  client:
+    service-url:
+      defaultZone=http://localhost:9000/eureka/
