--- a/clients/application.yml
+++ b/clients/application.yml
@@ -18,4 +18,4 @@
 eureka:
   client:
     service-url:
-      defaultZone: http://${EUREKA_ADDRESS}
+      defaultZone: http://${EUREKA_ADDRESS}/eureka/
