--- a/gateway/application.yml
+++ b/gateway/application.yml
@@ -3,9 +3,15 @@ eureka:
     service-url:
       defaultZone: http://${EUREKA_ADDRESS}/eureka/
 
+
+
 spring:
   cloud:
     gateway:
+      discovery:
+        locator:
+          enabled: true
+
       routes:
         - id: clients
           uri: lb://CLINETS
