--- a/gateway/application.yml
+++ b/gateway/application.yml
@@ -14,6 +14,6 @@ spring:
 
       routes:
         - id: clients
-          uri: lb://CLINETS
+          uri: lb://CLIENTS
           predicates:
             - Path=/**
