--- a/gateway/application.yml
+++ b/gateway/application.yml
@@ -3,6 +3,7 @@ eureka:
     service-url:
       defaultZone: http://${EUREKA_ADDRESS}/eureka/
     register-with-eureka: false
+    fetch-registry: true
 
 
 
