--- a/eureka/application.yml
+++ b/eureka/application.yml
@@ -5,6 +5,6 @@ spring:
 eureka:
   client:
     register-with-eureka: true
-    fetch-registry: false
+    fetch-registry: true
 
   renewalPercentThreshold: 0.85
