--- a/gateway/application.yml
+++ b/gateway/application.yml
@@ -1,9 +1,13 @@
+server:
+  port:
+    8000
+
 eureka:
   client:
     service-url:
       defaultZone: http://${EUREKA_ADDRESS}/eureka/
     fetch-registry: true
-    register-with-eureka: false
+    register-with-eureka: true
 
 
 
@@ -13,9 +17,20 @@ spring:
       discovery:
         locator:
           enabled: true
+          lowerCaseServiceId: true
 
       routes:
         - id: clients
           uri: lb://CLIENTS
           predicates:
           - Path=/**
+
+management:
+  endpoint:
+    gateway:
+      enabled: true
+
+  endpoints:
+    web:
+      exposure:
+        include: gateway
