--- a/eureka/application.yml
+++ b/eureka/application.yml
@@ -6,5 +6,7 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
+  server:
+    enable-self-preservation: false
 
   renewalPercentThreshold: 0.85
