--- a/eureka/application.yml
+++ b/eureka/application.yml
@@ -6,6 +6,8 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
+    service-url:
+      defaultZone: http://${EUREKA_ADDRESS}/eureka/
   server:
     enable-self-preservation: false
 
