--- a/eureka/application.yml
+++ b/eureka/application.yml
@@ -8,7 +8,9 @@ eureka:
     fetch-registry: true
     service-url:
       defaultZone: http://${EUREKA_ADDRESS}/eureka/
-  server:
-    enable-self-preservation: false
+#  server:
+#    enable-self-preservation: false
+    instance:
+      prefer-ip-address: true
 
   renewalPercentThreshold: 0.85
