--- a/application.yml
+++ b/application.yml
@@ -20,5 +20,6 @@ spring:
         - eth3
         - lo
 eureka:
-  instance:
-    preferIpAddress: true
+  client:
+    instance:
+     preferIpAddress: true
