--- a/application.yml
+++ b/application.yml
@@ -13,3 +13,10 @@
 eureka:
   instance:
     prefer-ip-address: true
+
+  client:
+    service-url:
+      defaultZone: http://${EUREKA_ADDRESS}/eureka/
+
+    register-with-eureka: true
+    fetch-registry: true
