--- a/security/application.yml
+++ b/security/application.yml
@@ -2,7 +2,7 @@ server:
   port:
     10000
   datasource:
-    url: jdbc:postgresql://localhost:5432/application
+    url: jdbc:postgresql://${DB_ADDRESS}/application
     username: user
     password: user
 
