--- a/security/application.yml
+++ b/security/application.yml
@@ -2,7 +2,7 @@ server:
   port:
     10000
   datasource:
-    url: jdbc:postgresql://${DB_ADDRESS}/application
+    url: jdbc:postgresql://${DB_ADDRESS}/postgres
     username: user
     password: user
 
