gateway config mistake

--- a/gateway/application.yml
+++ b/gateway/application.yml
@@ -43,7 +43,7 @@ custom:
     address: ${KAFKA_ADDRESS}:${KAFKA_PORT}
     topics:
       request: ${TOPIC_REQUEST}
-      response: ${TOPIC_RESPONSE};
+      response: ${TOPIC_RESPONSE}
 
 jwt:
   cookie:
