--- a/clients/application.yml
+++ b/clients/application.yml
@@ -15,11 +15,13 @@
 #  devtools:
 #    add-properties: false
 spring:
-  data:
-    mongodb:
-      username: ${MONGO_USER}
-      password: ${MONGO_PASSWORD}
-      uri: mongodb://${MONGO_ADDRESS}/${MONGO_DB}
+  datasource:
+    url: jdbc:mongodb://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_ADDRESS}/${MONGO_DB}
+#  data:
+#    mongodb:
+#      username: ${MONGO_USER}
+#      password: ${MONGO_PASSWORD}
+#      uri: mongodb://${MONGO_ADDRESS}/${MONGO_DB}
 
   jackson:
     serialization:
