clients debug enabled

--- a/clients/application-dev.yml
+++ b/clients/application-dev.yml
@@ -1,5 +1,4 @@
-#spring:
-#  datasource:
-#    url: jdbc:postgresql://localhost:0000
-#    username: username
-#    password: password
+logging:
+  level:
+    org:
+      springframework: debug
