--- a/clients/application.yml
+++ b/clients/application.yml
@@ -5,6 +5,9 @@ spring:
   mvc:
     static-path-pattern: /static/**
 
+  resources:
+    static-locations: classpath:/resources/static
+
   datasource:
     url: jdbc:mongodb://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_ADDRESS}/${MONGO_DB}?authSource=admin&authMechanism=SCRAM-SHA-1
   data:
