--- a/clients/application.yml
+++ b/clients/application.yml
@@ -14,6 +14,10 @@ spring:
     serialization:
       write-dates-as-timestamps: false
 
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 custom:
   gateway:
     address: ${LOCALHOST_GATEWAY_ADDRESS}
